# Learning_C

./: 10.c  11.c  12.c  13.c  14.c  15.c  16.c  17.c  18.c  19.c  2.c  4.c  5.c  6.c  7.c  8.c  9.c  CMakeLists.txt  README.md  main.c  test.c
Ex 1/: 1.c  first_exercise.c  second_exercise.c  third_exercise.c
