cmake_minimum_required(VERSION 3.26)
project(Learning_C C)

set(CMAKE_C_STANDARD 11)

add_executable(Test "test.c")
add_executable(Ex1 "1.c")
add_executable(Ex2 "2.c")
add_executable(Ex3 "3.c")
add_executable(Ex4 "4.c")
add_executable(Ex5 "5.c")
add_executable(Ex6 "6.c")
add_executable(Ex7 "7.c")
add_executable(Ex8 "8.c")
add_executable(Ex9 "9.c")
add_executable(Ex10 "10.c")
add_executable(Ex11 "11.c")
add_executable(Ex12 "12.c")
add_executable(Ex13 "13.c")
add_executable(Ex14 "14.c")
add_executable(Ex15 "15.c")
add_executable(Ex16 "16.c")
add_executable(Ex17 "17.c")